--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5965,9 +5965,18 @@ PNH sightseeing on 5th-6th .<br>
 * NPH dental appointment on 26th.<br> 
 * Done with aligners, removed attachments/polishing and started wearing Retainers on 26th.<br>
 * NPH picked up YMCA charity walk packages from Y-Towson on 27th.<br>
-* Turkey Trot 5K (3.1m) charity walk at Y-Towson from 8.15am to 10am on 28th -- walk took ~58 minutes.<br>
-*  
-
+* Turkey Trot 5K (3.1m) charity walk at Y-Towson from 8.15am to 10am on 28th -- walk took ~57 minutes.<br>
+* Stopped at Rotunda to water Norman's plants on way to Arundel Mills Mall on 29th.<br>
+* Black Friday shopping at Arundel Mills Mall -- 4.30-8.30pm, Pizza Hut dinner.<br> 
+* NPH haircut at home by PNH on 30th.<br>
+* Shopping at Towson Town Center Mall, Kohl's, and Sam's club -- 2.00-6.30pm -- on 30th.</TD>
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Dec 2024</TD>
+<TD>
+* 
 </HTML>                     
                        
                        
