--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5976,7 +5976,9 @@ PNH sightseeing on 5th-6th .<br>
 </TR>
 <TD>Dec 2024</TD>
 <TD>
-* 
+* HNH swimming class on 1st at 3.00pm.<br>
+* Bought Ego Power+ self propelled lawn mower (Home Depot), and Apple iPad (10th generation) from QVC.<br>
+*
 </HTML>                     
                        
                        
