--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5977,8 +5977,12 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Dec 2024</TD>
 <TD>
 * HNH swimming class on 1st at 3.00pm.<br>
-* Bought Ego Power+ self propelled lawn mower (Home Depot), and Apple iPad (10th generation) from QVC.<br>
-*
+* Bought Ego Power+ self-propelled lawn mower (Home Depot), and Apple iPad (10th generation) from QVC.<br>
+* NPH long-term job transfer at STScI was not approved on 2nd.<br>
+* Lunch at Honest restaurant, shopping at Patel Brothers on 7th.<br>
+* Shopping at Wegmans, returned old Verizon Box at their store on 7th.<br>
+* HNH swimming class on 8th at 3.00pm.<br>
+* Shopping at Walmart on 8th.<br>
 </HTML>                     
                        
                        
