--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5983,7 +5983,7 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans, returned old Verizon Box at their store on 7th.<br>
 * HNH swimming class on 8th at 3.00pm.<br>
 * Shopping at Walmart on 8th.<br>
-* Shopping at Wegmans, Sam's club on 14th.<br>
+* Shopping at Wegmans, Sam's club, UPS (returned NB shoes) on 14th.<br>
 * HNH swimming class on 15th at 3.00pm.<br>
 </HTML>                     
                        
