--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5985,6 +5985,12 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Walmart on 8th.<br>
 * Shopping at Wegmans, Sam's club, UPS (returned NB shoes) on 14th.<br>
 * HNH swimming class on 15th at 3.00pm.<br>
+* HNH orthodontist appointment on 17th.<br>
+* PNH Dr appointment (OBGYN) on 19th, continue hormone medication.<br>
+* Snow falls on 20th -- last day of school before winter break.<br>
+* Movie at Cinemark (Towson) -- Sonic the Hedgehog 3 -- 12.30pm to 3.30pm.<br>
+* Hirav came for 1-night on 21st at 7pm, left for India on 22nd morning from DC.<br>
+* 
 </HTML>                     
                        
                        
