--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5990,7 +5990,15 @@ PNH sightseeing on 5th-6th .<br>
 * Snow falls on 20th -- last day of school before winter break.<br>
 * Movie at Cinemark (Towson) -- Sonic the Hedgehog 3 -- 12.30pm to 3.30pm.<br>
 * Hirav came for 1-night on 21st at 7pm, left for India on 22nd morning from DC.<br>
-* 
+* HNH swimming class on 22nd at 3.00pm.<br>
+* Visited Los Angeles, CA from 24th to 30th -- <a href="./trip_details/los-angeles_trip_2024.txt"> Details</a>.<br>
+* Shopping at Wegmans on 31st -- free stuff pickup from Muller.</TD>
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Jan 2025</TD>
+<TD>
 </HTML>                     
                        
                        
