--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5988,7 +5988,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH orthodontist appointment on 17th.<br>
 * PNH Dr appointment (OBGYN) on 19th, continue hormone medication.<br>
 * Snow falls on 20th -- last day of school before winter break.<br>
-* Movie at Cinemark (Towson) -- Sonic the Hedgehog 3 -- 12.30pm to 3.30pm.<br>
+* Movie at Cinemark (Towson) -- Sonic the Hedgehog 3 -- 12.30pm to 3.30pm -- on 21st.<br>
 * Hirav came for 1-night on 21st at 7pm, left for India on 22nd morning from DC.<br>
 * HNH swimming class on 22nd at 3.00pm.<br>
 * Visited Los Angeles, CA from 24th to 30th -- <a href="./trip_details/los-angeles_trip_2024.txt"> Details</a>.<br>
@@ -5999,6 +5999,8 @@ PNH sightseeing on 5th-6th .<br>
 </TR>
 <TD>Jan 2025</TD>
 <TD>
+* Light snow fall on 3rd -- schools closed 2 hours early.<br>
+* 
 </HTML>                     
                        
                        
