--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6000,7 +6000,8 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Jan 2025</TD>
 <TD>
 * Light snow fall on 3rd -- schools closed 2 hours early.<br>
-* 
+* HNH swimming class on 5th at 3.00pm.<br>
+* Shopping at Wegmans on 5th.<br>
 </HTML>                     
                        
                        
