--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6000,8 +6000,10 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Jan 2025</TD>
 <TD>
 * Light snow fall on 3rd -- schools closed 2 hours early.<br>
+* NPH haircut at home by PNH on 5th.<br>
 * HNH swimming class on 5th at 3.00pm.<br>
 * Shopping at Wegmans on 5th.<br>
+* Snow falls on 6th -- Schools closed and STScI on liberal leave on 6th.<br>
 </HTML>                     
                        
                        
