--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6003,7 +6003,10 @@ PNH sightseeing on 5th-6th .<br>
 * NPH haircut at home by PNH on 5th.<br>
 * HNH swimming class on 5th at 3.00pm.<br>
 * Shopping at Wegmans on 5th.<br>
-* Snow falls on 6th -- Schools closed and STScI on liberal leave on 6th.<br>
+* Snow fall (3-4in) on 6th -- Schools closed and STScI on Admin leave on 6th.<br>
+* Schools closed and STScI on liberal leave on 7th.<br>
+* Schools delayed by 2 hours because of icy conditions on 8th.<br>
+* 
 </HTML>                     
                        
                        
