--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5531,6 +5531,7 @@ PNH sightseeing on 5th-6th .<br>
 * Basement/room (partly) flooded due to Sump-Pump problem on 18th.<br>
 * HNH-PNH school Winter/Christmas break from 22nd.<br>
 * Shopping at Wegmans (NPH-PNH) on 23rd.<br>
+* PHN Dr appointment (Maryam Khan) and blood tests on 26th.<br>
 * Sump Pump repair by Basement Systems on 26th.<br>
 * NPH COVID vaccine (Pfizer 2023-2024 Formula) on 26th at Walgreens.<br>
 * HNH swimming class on 27th at 5.00pm (makeup from August 6th).<br>
@@ -6006,9 +6007,12 @@ PNH sightseeing on 5th-6th .<br>
 * Snow fall (~4in) on 6th -- Schools closed and STScI on Admin leave on 6th.<br>
 * Schools closed and STScI on liberal leave on 7th.<br>
 * Schools were delayed by 2 hours because of icy conditions on 8th.<br>
+* PHN Dr appointment (Maryam Khan) on 10th and blood tests on 14th.<br>
 * Dinner at Sangam restaurant on 10th.<br>
 * Shopping at Wegmans on 10th.<br>
 * Snow fall (~1in) on 11th morning.<br>
+* AAS Meeting at National Harbor, MD -- Jan 13-15.<br>
+* NPH stayed 2 nights -- 3 days at Gaylord Resort -- good poster session on 13th.<br>
 </HTML>                     
                        
                        
