--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6013,6 +6013,8 @@ PNH sightseeing on 5th-6th .<br>
 * Snow fall (~1in) on 11th morning.<br>
 * AAS Meeting at National Harbor, MD -- Jan 13-15.<br>
 * NPH stayed 2 nights -- 3 days at Gaylord Resort -- good poster session on 13th.<br>
+* Light snow fall on 16th.<br>
+* 
 </HTML>                     
                        
                        
