--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6014,7 +6014,8 @@ PNH sightseeing on 5th-6th .<br>
 * AAS Meeting at National Harbor, MD -- Jan 13-15.<br>
 * NPH stayed 2 nights -- 3 days at Gaylord Resort -- good poster session on 13th.<br>
 * Light snow fall on 16th.<br>
-* 
+* Shopping at Walmart and Wegmans on 18th.<br>
+* Snow fall (~3in) on 19th
 </HTML>                     
                        
                        
