--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6015,7 +6015,9 @@ PNH sightseeing on 5th-6th .<br>
 * NPH stayed 2 nights -- 3 days at Gaylord Resort -- good poster session on 13th.<br>
 * Light snow fall on 16th.<br>
 * Shopping at Walmart and Wegmans on 18th.<br>
-* Snow fall (~3in) on 19th
+* Snow fall (~3in) on 19th.<br>
+* Donald Trump (President) and J.D.Vance (VP) inauguration on 20th.<br>
+* PNH Dr appointment (Mammogram) on 20th.<br>
 </HTML>                     
                        
                        
