--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6011,11 +6011,13 @@ PNH sightseeing on 5th-6th .<br>
 * Dinner at Sangam restaurant on 10th.<br>
 * Shopping at Wegmans on 10th.<br>
 * Snow fall (~1in) on 11th morning.<br>
+* NFL playoffs -- Ravens won wild card round game against Steeler 28-14 on 11th.<br>
 * AAS Meeting at National Harbor, MD -- Jan 13-15.<br>
 * NPH stayed 2 nights -- 3 days at Gaylord Resort -- good poster session on 13th.<br>
 * Light snow fall on 16th.<br>
 * Shopping at Walmart and Wegmans on 18th.<br>
 * Snow fall (~3in) on 19th.<br>
+* NFL playoffs -- Ravens lost divisional round game against Bills 27-25 on 19th.<br>
 * Donald Trump (President) and J.D.Vance (VP) inauguration on 20th.<br>
 * PNH Dr appointment (Mammogram) on 20th.<br>
 </HTML>                     
