--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6020,6 +6020,11 @@ PNH sightseeing on 5th-6th .<br>
 * NFL playoffs -- Ravens lost divisional round game against Bills 27-25 on 19th.<br>
 * Donald Trump (President) and J.D.Vance (VP) inauguration on 20th.<br>
 * PNH Dr appointment (Mammogram) on 20th.<br>
+* Very cold temperatures -- day time 19F (feels like 15F), night time 8F (feels like 0F).<br>
+* Schools were delayed by 2 hours because of icy conditions on 21st, STScI on liberal leave.<br>
+* Schools were delayed by 2 hours because of icy conditions on 22nd, STScI on liberal leave.<br>
+* Lunch at Taco Bell on 25th, Shopping at Wegmans and Sam's club.<br>
+* 
 </HTML>                     
                        
                        
