--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6024,6 +6024,8 @@ PNH sightseeing on 5th-6th .<br>
 * Schools were delayed by 2 hours because of icy conditions on 21st, STScI on liberal leave.<br>
 * Schools were delayed by 2 hours because of icy conditions on 22nd, STScI on liberal leave.<br>
 * Lunch at Taco Bell on 25th, Shopping at Wegmans and Sam's club.<br>
+* N-P-H all suffering from cold/cough during the week of 27th.<br>
+* US citizenship application (N-400) for N-P submitted on 28th.<br>
 * 
 </HTML>                     
                        
