--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6034,6 +6034,9 @@ PNH sightseeing on 5th-6th .<br>
 <TD>
 * HNH swimming class on 2nd at 3.00pm.<br>
 * Shopping at Wegmans on 2nd.<br>
+* NPH picked up a new retainer (old one has a crack) from DentalOne on 5th.<br>
+* Icy conditions on 6th morning -- Schools closed.<br>
+* 
 </HTML>                     
                        
                        
