--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6036,7 +6036,9 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 2nd.<br>
 * NPH picked up a new retainer (old one has a crack) from DentalOne on 5th.<br>
 * Icy conditions on 6th morning -- Schools closed.<br>
-* 
+* Lunch at Honest restaurant, shopping at Patel Brothers on 8th.<br>
+* HNH swimming class on 9th at 3.00pm.<br>
+* Super Bowl Sunday on 9th (KC Chiefs  ).<br>
 </HTML>                     
                        
                        
