--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6038,7 +6038,8 @@ PNH sightseeing on 5th-6th .<br>
 * Icy conditions on 6th morning -- Schools closed.<br>
 * Lunch at Honest restaurant, shopping at Patel Brothers on 8th.<br>
 * HNH swimming class on 9th at 3.00pm.<br>
-* Super Bowl Sunday on 9th (KC Chiefs  ).<br>
+* Super Bowl Sunday on 9th (Eagles beat Chiefs 40-22).<br>
+* Snow fall -- Schools closed 3-hours early, STScI half-day liberal leave on 11th.<br>
 </HTML>                     
                        
                        
