--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6039,7 +6039,9 @@ PNH sightseeing on 5th-6th .<br>
 * Lunch at Honest restaurant, shopping at Patel Brothers on 8th.<br>
 * HNH swimming class on 9th at 3.00pm.<br>
 * Super Bowl Sunday on 9th (Eagles beat Chiefs 40-22).<br>
-* Snow fall -- Schools closed 3-hours early, STScI half-day liberal leave on 11th.<br>
+* Snow fall (~4in) -- Schools closed 3 hours early, STScI half-day liberal leave on 11th.<br>
+* Virtual school day and STScI liberal leave on 12th.<br>
+
 </HTML>                     
                        
                        
