--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6041,7 +6041,9 @@ PNH sightseeing on 5th-6th .<br>
 * Super Bowl Sunday on 9th (Eagles beat Chiefs 40-22).<br>
 * Snow fall (~4in) -- Schools closed 3 hours early, STScI half-day liberal leave on 11th.<br>
 * Virtual school day and STScI liberal leave on 12th.<br>
-
+* Light snow fall on 15th.<br>
+* Honda CRV 10th service on 15th.<br>
+* Movie at Cinemark (Towson) -- Dog Man -- 4.30pm to 6.30pm -- on 15th.<br>
 </HTML>                     
                        
                        
