--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6043,7 +6043,11 @@ PNH sightseeing on 5th-6th .<br>
 * Virtual school day and STScI liberal leave on 12th.<br>
 * Light snow fall on 15th.<br>
 * Honda CRV 10th service on 15th.<br>
-* Movie at Cinemark (Towson) -- Dog Man -- 4.30pm to 6.30pm -- on 15th.<br>
+* Movie at Cinemark (Towson) -- Dog Man -- 4.30pm to 6.45pm -- on 15th.<br>
+* Shopping at Sam's club on 15th, dinner pick up from Domino's Pizza.<br>
+* HNH swimming class on 16th at 3.00pm.<br>
+* Shopping at Wegmans on 16th.<br>
+* High winds -- no electricity for 5.5 hours (5.30 pm to 11 pm) on the 16th.<br>
 </HTML>                     
                        
                        
