--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6049,7 +6049,8 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 16th.<br>
 * High winds -- no electricity for 5.5 hours (5.30 pm to 11 pm) on the 16th.<br>
 * Light snow fall on 20th -- very cold temperatures (feels like 5F or -15C)<br>
-* 
+* HNH swimming class on 23rd at 3.00pm.<br>
+* Shopping at Wegmans on 23rd.<br>
 </HTML>                     
                        
                        
