--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6051,6 +6051,8 @@ PNH sightseeing on 5th-6th .<br>
 * Light snow fall on 20th -- very cold temperatures (feels like 5F or -15C)<br>
 * HNH swimming class on 23rd at 3.00pm.<br>
 * Shopping at Wegmans on 23rd.<br>
+* Paid-off Mazda CX-30 auto loan about 3 years early on 26th.<br>
+
 </HTML>                     
                        
                        
