--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5954,7 +5954,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 9th at 11.00am.<br>
 * Shopping at Walmart, Amazon return at Kohl's, lunch at Baja Fresh on 9th.<br>
 * HNH swimming class on 10th at 1.00pm (makeup) -- cleared Pro 2 level.<br>
-* Dinner pick up from Dominos and Papa Johns on 15th.<br> 
+* Dinner pick up from Dominos and Papa John's on 15th.<br> 
 * HNH swimming class on 16th at 2.00pm (makeup).<br>
 * Shopping at Wegmans on 16th.<br>
 * HNH swimming class on 17th at 3.00pm -- started 1-hr swim force level.<br>
@@ -6052,7 +6052,15 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 23rd at 3.00pm.<br>
 * Shopping at Wegmans on 23rd.<br>
 * Paid-off Mazda CX-30 auto loan about 3 years early on 26th.<br>
-
+* Dinner pick-up from Papa John's on 28th.</TD>
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Mar 2025</TD>
+<TD>
+* HNH swimming class on 2nd at 3.00pm.<br>
+* Shopping at Wegmans on 2nd.<br>
 </HTML>                     
                        
                        
