--- a/home_index.html
+++ b/home_index.html
@@ -66,7 +66,7 @@ TR:nth-child(even) {
 
 <TR>
 <TH><h4>
-<a href="http://www.ndtv.com">NDTV</a><br>
+<a href="http://www.ndtv.com">NDTV</a> -- <a href="http://www.cnn.com">CNN</a><br>
 <a href="http://www.divyabhaskar.co.in/">DB</a> -- <a href="http://timesofindia.indiatimes.com/">ToI</a> 
 </h4></TH>
 
