--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5118,7 +5118,7 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Sam's club on 6th (HNH home alone).<br>
 * NPH dental appointment (cleaning) on 11th.<br>
 * NPH's 3rd COVID updated booster/Pfizer and HNH's 2nd COVID updated booster/Pfizer on 12th at Walgreens.<br>
-* Dinner pick-up from Falafel house on 12th.<br>
+* Dinner pick-up from Falafel House on 12th.<br>
 * Shopping at Wegmans on 13th.<br>
 * Dinner pick-up from Season's Pizza on 18th.<br>
 * Shopping at Walmart on 19th.<br>
@@ -5328,7 +5328,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH elementary school farewell on 8th -- 9.30am to 11am.<br>
 * HNH baseball play-off game on 9th (under lights and some rain) -- season over after a loss.<br>
 * Kalpanaben-Nirali visited us from 12.30pm to 2.30pm on 10th (going from PA to VA).<br>
-* Dinner pick-up from Falafel house on 10th.<br>
+* Dinner pick-up from Falafel House on 10th.<br>
 * Shopping at IKEA on 11th.<br>
 * Harshil last day of elementary school at WTES on 13th.<br>
 * HNH/PNH to pool party for 5th graders by PTA on 14th.<br>
@@ -5526,7 +5526,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 16th at 11.30am (makeup from 10th).<br>
 * Shopping at Sam's club and Wegmans (NPH-PNH) on 16th.<br>
 * HNH swimming class on 17th at 11.00am.<br>
-* Lunch pick-up from Falafel house on 17th.<br>
+* Lunch pick-up from Falafel House on 17th.<br>
 * CMS closed due to power outage on 18th.<br>
 * Basement/room (partly) flooded due to Sump-Pump problem on 18th.<br>
 * HNH-PNH school Winter/Christmas break from 22nd.<br>
@@ -6061,6 +6061,7 @@ PNH sightseeing on 5th-6th .<br>
 <TD>
 * HNH swimming class on 2nd at 3.00pm.<br>
 * Shopping at Wegmans on 2nd.<br>
+* Dinner pick-up from Falafel House on 7th.<br>
 </HTML>                     
                        
                        
