--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6062,6 +6062,9 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 2nd at 3.00pm.<br>
 * Shopping at Wegmans on 2nd.<br>
 * Dinner pick-up from Falafel House on 7th.<br>
+* Shopping at Sam's club on 8th.<br>
+* HNH swimming class on 9th at 3.00pm.<br>
+* Shopping at Wegmans on 9th.<br>
 </HTML>                     
                        
                        
