--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6065,6 +6065,9 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Sam's club on 8th.<br>
 * HNH swimming class on 9th at 3.00pm.<br>
 * Shopping at Wegmans on 9th.<br>
+* Dinner at Taco Bell on 15th.<br>
+* HNH swimming class on 16th at 3.00pm.<br>
+* Shopping at Wegmans on 16th.<br>
 </HTML>                     
                        
                        
