--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6052,7 +6052,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 23rd at 3.00pm.<br>
 * Shopping at Wegmans on 23rd.<br>
 * Paid-off Mazda CX-30 auto loan about 3 years early on 26th.<br>
-* Dinner pick-up from Papa John's on 28th.</TD>
+* Dinner pick-up from Papa John's on the 28th.</TD>
 <TR>
 <TD><HR></TD>
 <TD><HR></TD>
@@ -6062,12 +6062,15 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 2nd at 3.00pm.<br>
 * Shopping at Wegmans on 2nd.<br>
 * Dinner pick-up from Falafel House on 7th.<br>
-* Shopping at Sam's club on 8th.<br>
+* Shopping at Sam's Club on the 8th.<br>
 * HNH swimming class on 9th at 3.00pm.<br>
 * Shopping at Wegmans on 9th.<br>
 * Dinner at Taco Bell on 15th.<br>
 * HNH swimming class on 16th at 3.00pm.<br>
 * Shopping at Wegmans on 16th.<br>
+* Dinner pick-up from Season's Pizza on the 21st.<br>
+* HNH swimming class on 23rd at 3.00pm.<br>
+* Shopping at Wegmans on 23rd.<br>
 </HTML>                     
                        
                        
