--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6071,6 +6071,19 @@ PNH sightseeing on 5th-6th .<br>
 * Dinner pick-up from Season's Pizza on the 21st.<br>
 * HNH swimming class on 23rd at 3.00pm.<br>
 * Shopping at Wegmans on 23rd.<br>
+* Mazda completed 15,000 miles on 26th.<br>
+* NPH N-400 interview scheduled for 2nd May on 27th.<br>
+* Dinner pick-up from Bubbakoo's Burritos on 29th.<br>
+* HNH swimming class on 30th at 3.00pm.<br>
+* NPH shopping at Wegmans on 30th (PNH at home).<br>
+* KPH alone went to Vietnam/Bali trip with Mayurmama all -- 31st March to 10th April.</TD>
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Apr 2025</TD>
+<TD>
+* 
 </HTML>                     
                        
                        
