--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6083,7 +6083,12 @@ PNH sightseeing on 5th-6th .<br>
 </TR>
 <TD>Apr 2025</TD>
 <TD>
-* 
+* HNH baseball (Triple A, Cockeysville Clippers) started on 3rd at 5.30pm.<br>
+* HNH baseball on 5th at 10am.<br>
+* Lunch at MOD Pizza on 5th.<br>
+* Shopping at Sam's Club on 5th.<br>
+* HNH swimming class on 6th at 3.00pm.<br>
+* Shopping at Wegmans on 6th.<br>
 </HTML>                     
                        
                        
