--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6089,6 +6089,10 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Sam's Club on 5th.<br>
 * HNH swimming class on 6th at 3.00pm.<br>
 * Shopping at Wegmans on 6th.<br>
+* HNH baseball on 7th at 5.30pm.<br>
+* HNH baseball on 10th at 5.30pm.<br>
+* HNH and PNH started Spring break from 12th until 21st.<br>
+* HNH baseball on 12th at 9.00am.<br>
 </HTML>                     
                        
                        
