--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5984,6 +5984,7 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans, returned old Verizon Box at their store on 7th.<br>
 * HNH swimming class on 8th at 3.00pm.<br>
 * Shopping at Walmart on 8th.<br>
+* NPH dental appointment (cleaning) on the 12th.<br> 
 * Shopping at Wegmans, Sam's club, UPS (returned NB shoes) on 14th.<br>
 * HNH swimming class on 15th at 3.00pm.<br>
 * HNH orthodontist appointment on 17th.<br>
@@ -6073,6 +6074,7 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 23rd.<br>
 * Mazda completed 15,000 miles on 26th.<br>
 * NPH N-400 interview scheduled for 2nd May on 27th.<br>
+* NPH dental appointment (cleaning) on the 28th.<br> 
 * Dinner pick-up from Bubbakoo's Burritos on 29th.<br>
 * HNH swimming class on 30th at 3.00pm.<br>
 * NPH shopping at Wegmans on 30th (PNH at home).<br>
@@ -6092,7 +6094,13 @@ PNH sightseeing on 5th-6th .<br>
 * HNH baseball on 7th at 5.30pm.<br>
 * HNH baseball on 10th at 5.30pm.<br>
 * HNH and PNH started Spring break from 12th until 21st.<br>
-* HNH baseball on 12th at 9.00am.<br>
+* HNH baseball on 12th at 9.00am (canceled due to rainy weather).<br>
+* Lunch at Honest Restaurant on 12th, shopping at Walmart and Patel Borthers.<br>
+* HNH swimming class on 13th at 3.00pm.<br>
+* HNH baseball on 14th at 5.30pm.<br>
+* Shopping at Home Depot on 14th.<br>
+* HNH baseball on 17th at 5.30pm.<br>
+* 
 </HTML>                     
                        
                        
