--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6100,7 +6100,8 @@ PNH sightseeing on 5th-6th .<br>
 * HNH baseball on 14th at 5.30pm.<br>
 * Shopping at Home Depot on 14th.<br>
 * HNH baseball on 17th at 5.30pm.<br>
-* 
+* Sugarloaf mountain (hiking) -- 11.45am to 4.30pm -- total 124 miles on 18th. (lot of flies).<br>
+* HNH baseball on 19th at 8.30am (pictures and practice).<br>
 </HTML>                     
                        
                        
