--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6101,7 +6101,9 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Home Depot on 14th.<br>
 * HNH baseball on 17th at 5.30pm.<br>
 * Sugarloaf mountain (hiking) -- 11.45am to 4.30pm -- total 124 miles on 18th. (lot of flies).<br>
-* HNH baseball on 19th at 8.30am (pictures and practice).<br>
+* HNH baseball on 19th at 8.30am (pictures and friendly game with AA kids).<br>
+* Lunch at Coal Fire Pizza on 19th.<br>
+* Shopping at Wegmans and Sam's Club on 19th.<br>
 </HTML>                     
                        
                        
