--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6104,6 +6104,14 @@ PNH sightseeing on 5th-6th .<br>
 * HNH baseball on 19th at 8.30am (pictures and friendly game with AA kids).<br>
 * Lunch at Coal Fire Pizza on 19th.<br>
 * Shopping at Wegmans and Sam's Club on 19th.<br>
+* Visited Pittsburgh -- 26th to 27th -- Mazada total 520 miles.<br>
+* Left home at 8:40am, reached Pittsburgh at 1pm after 2 short stops on 26th.<br>
+* Lunch together, dinner at El Campesino Mexican restaurant on 26th.<br>
+* Manisha-Mehulbhai came from NJ at 9pm on 26th (and left on 27th at 1.30pm).<br>
+* A short name ceremony for Amay on 27th morning, lunch together.<br>
+* Left Pittsburgh at 3pm and reached Wegmans/Hunt Valley at 7.15pm on 27th, home at 8pm.<br>
+* Met Dkaki, Neil-Sannidhi-Amay, Neesha-Dan-Raina, and Manisha-Mehulbhai.<br>
+* 
 </HTML>                     
                        
                        
