--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6120,8 +6120,8 @@ PNH sightseeing on 5th-6th .<br>
 <TD>May 2025</TD>
 <TD>
 * HNH battle of the books competition at Cockeysville library on 1st.<br>
-* NPH USCIS interview for citizenship on 2nd (Passed).<br>
-
+* NPH USCIS interview for citizenship on 2nd (Passed, Oath ceremony on 22nd).<br>
+* HNH baseball on 3rd at 9am.<br>
 </HTML>                     
                        
                        
