--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6122,6 +6122,9 @@ PNH sightseeing on 5th-6th .<br>
 * HNH battle of the books competition at Cockeysville library on 1st.<br>
 * NPH USCIS interview for citizenship on 2nd (Passed, Oath ceremony on 22nd).<br>
 * HNH baseball on 3rd at 9am.<br>
+* Lunch at Subway, shopping at Walmart on 3rd.<br>
+* HNH swimming class on 4th at 3.00pm.<br>
+* Shopping at Wegmans on 4th.<br>
 </HTML>                     
                        
                        
