--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6104,7 +6104,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH baseball on 19th at 8.30am (pictures and friendly game with AA kids).<br>
 * Lunch at Coal Fire Pizza on 19th.<br>
 * Shopping at Wegmans and Sam's Club on 19th.<br>
-* HNH baseball on 25th at 7.45pm (1st game).<br>
+* HNH baseball on 25th at 7.45pm (1st game, lost).<br>
 * Visited Pittsburgh -- 26th to 27th -- Mazada total 520 miles.<br>
 * Left home at 8:40am, reached Pittsburgh at 1pm after 2 short stops on 26th.<br>
 * Lunch together, dinner at El Campesino Mexican restaurant on 26th.<br>
@@ -6112,19 +6112,23 @@ PNH sightseeing on 5th-6th .<br>
 * A short name ceremony for Amay on 27th morning, lunch together.<br>
 * Left Pittsburgh at 3pm and reached Wegmans/Hunt Valley at 7.15pm on 27th, home at 8pm.<br>
 * Met Dkaki, Neil-Sannidhi-Amay, Neesha-Dan-Raina, and Manisha-Mehulbhai.<br>
-* HNH baseball on 28th at 6.00pm (2nd game).</TD>
+* HNH baseball on 28th at 6.00pm (2nd game, tied).</TD>
 <TR>
 <TD><HR></TD>
 <TD><HR></TD>
 </TR>
 <TD>May 2025</TD>
 <TD>
-* HNH battle of the books competition at Cockeysville library on 1st.<br>
+* HNH battle of the books competition at Cockeysville library on 1st (HNH missed 3rd baseball game, lost).<br>
 * NPH USCIS interview for citizenship on 2nd (Passed, Oath ceremony on 22nd).<br>
 * HNH baseball on 3rd at 9am.<br>
 * Lunch at Subway, shopping at Walmart on 3rd.<br>
 * HNH swimming class on 4th at 3.00pm.<br>
 * Shopping at Wegmans on 4th.<br>
+* HNH baseball on 5th at 6.00pm (4th game, tied).<br>
+* HNH school Art/Fashion Show at on 7th (6.30-7.30pm).<br>
+* 
+</TD>
 </HTML>                     
                        
                        
