--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6127,6 +6127,7 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 4th.<br>
 * HNH baseball on 5th at 6.00pm (4th game, tied).<br>
 * HNH school Art/Fashion Show at on 7th (6.30-7.30pm).<br>
+* HNH baseball on 8th at 6.00pm (5th game, walk-off win).<br>
 * 
 </TD>
 </HTML>                     
