--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6002,7 +6002,7 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Jan 2025</TD>
 <TD>
 * Light snow fall on 3rd -- schools closed 2 hours early.<br>
-* NPH haircut at home by PNH on 5th.<br>
+* NPH-HNH haircut at home by PNH on 5th.<br>
 * HNH swimming class on 5th at 3.00pm.<br>
 * Shopping at Wegmans on 5th.<br>
 * Snow fall (~4in) on 6th -- Schools closed and STScI on Admin leave on 6th.<br>
@@ -6033,6 +6033,7 @@ PNH sightseeing on 5th-6th .<br>
 </TR>
 <TD>Feb 2025</TD>
 <TD>
+* NPH haircut at home by PNH on 2nd.<br>
 * HNH swimming class on 2nd at 3.00pm.<br>
 * Shopping at Wegmans on 2nd.<br>
 * NPH picked up a new retainer (old one has a crack) from DentalOne on 5th.<br>
@@ -6060,6 +6061,7 @@ PNH sightseeing on 5th-6th .<br>
 </TR>
 <TD>Mar 2025</TD>
 <TD>
+* NPH-HNH haircut at home by PNH on 2nd.<br>
 * HNH swimming class on 2nd at 3.00pm.<br>
 * Shopping at Wegmans on 2nd.<br>
 * Dinner pick-up from Falafel House on 7th.<br>
@@ -6086,6 +6088,7 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Apr 2025</TD>
 <TD>
 * HNH baseball (Triple A, Cockeysville Clippers) started on 3rd at 5.30pm.<br>
+* NPH haircut at home by PNH on 4th.<br>
 * HNH baseball on 5th at 10am.<br>
 * Lunch at MOD Pizza on 5th.<br>
 * Shopping at Sam's Club on 5th.<br>
@@ -6123,12 +6126,18 @@ PNH sightseeing on 5th-6th .<br>
 * NPH USCIS interview for citizenship on 2nd (Passed, Oath ceremony on 22nd).<br>
 * HNH baseball on 3rd at 9am.<br>
 * Lunch at Subway, shopping at Walmart on 3rd.<br>
+* NPH haircut at home by PNH on 4th.<br>
 * HNH swimming class on 4th at 3.00pm.<br>
 * Shopping at Wegmans on 4th.<br>
 * HNH baseball on 5th at 6.00pm (4th game, tied).<br>
 * HNH school Art/Fashion Show at on 7th (6.30-7.30pm).<br>
+* PNH N-400 interview scheduled for 2nd June on 8th.<br>
 * HNH baseball on 8th at 6.00pm (5th game, walk-off win).<br>
-* 
+* HNH baseball on 10th at 9am.<br>
+* NAM Patotsav at Shri Mangal Mandir on 10th -- 3.30pm to 9.30pm, traditional dresses.<br>
+* HNH swimming class on 11th at 3.00pm.<br>
+* Shopping at Wegmans on 11th.<br>
+* HNH haircut at home by PNH on 11th.<br>
 </TD>
 </HTML>                     
                        
