--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6138,6 +6138,8 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 11th at 3.00pm.<br>
 * Shopping at Wegmans on 11th.<br>
 * HNH haircut at home by PNH on 11th.<br>
+* Signature landscaping (cleaning and mulching) on 12th.<br>
+* HNH baseball on 12th at 6.00pm (6th game, lost).<br>
 </TD>
 </HTML>                     
                        
