--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6140,6 +6140,8 @@ PNH sightseeing on 5th-6th .<br>
 * HNH haircut at home by PNH on 11th.<br>
 * Signature landscaping (cleaning and mulching) on 12th.<br>
 * HNH baseball on 12th at 6.00pm (6th game, lost).<br>
+* HNH baseball on 15th at 6.00pm (7th game, rained out).<br>
+* HNH baseball on 16th at 5.30pm (8th game, ).<br>
 </TD>
 </HTML>                     
                        
