--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6141,7 +6141,11 @@ PNH sightseeing on 5th-6th .<br>
 * Signature landscaping (cleaning and mulching) on 12th.<br>
 * HNH baseball on 12th at 6.00pm (6th game, lost).<br>
 * HNH baseball on 15th at 6.00pm (7th game, rained out).<br>
-* HNH baseball on 16th at 5.30pm (8th game, ).<br>
+* HNH baseball on 16th at 5.30pm (8th game, rained out/thunderstorm).<br>
+* N-P-H to BBQ at Katie's place (Hwi, Russ/Svea, Norman, others) on 17th (3.30pm to 6.30pm).<br>
+* Shopping at Sam's Club on 17th.<br>
+* HNH swimming class on 18th at 3.00pm.<br>
+* Shopping at Wegmans on 18th.<br>
 </TD>
 </HTML>                     
                        
