--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6146,6 +6146,13 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Sam's Club on 17th.<br>
 * HNH swimming class on 18th at 3.00pm.<br>
 * Shopping at Wegmans on 18th.<br>
+* Mummy had a mild paralysis attack on 19th (recovering well).<br>
+* HNH baseball on 19th at 6.00pm (9th game, lost).<br>
+* HNH school Spring concert on 21st (6.15pm to 8.00pm) - Band/Trumpet.<br>
+* Honda completed 60,000 miles on 22nd.<br>
+* NPH at oath ceremony on 22nd -- Officially US citizen, got Certificate of Naturalization.<br>
+* HNH baseball on 22nd at 6.00pm (10th game, rained out).<br> 
+* 
 </TD>
 </HTML>                     
                        
