--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6150,8 +6150,13 @@ PNH sightseeing on 5th-6th .<br>
 * HNH baseball on 19th at 6.00pm (9th game, lost).<br>
 * HNH school Spring concert on 21st (6.15pm to 8.00pm) - Band/Trumpet.<br>
 * Honda completed 60,000 miles on 22nd.<br>
-* NPH at oath ceremony on 22nd -- Officially US citizen, got Certificate of Naturalization.<br>
+* NPH at USCIS oath ceremony on 22nd -- Officially US citizen, got Certificate of Naturalization.<br>
 * HNH baseball on 22nd at 6.00pm (10th game, rained out).<br> 
+* NPH applied for a US passport on 23rd.<br>
+* Dinner at Baja Fresh, Cheesecakes from Cheesecake Factory on 23rd.<br>
+* HNH baseball on 24th at 10.00am (11th game, lost).<br> 
+* HNH swimming class on 25th at 3.00pm.<br>
+* Shopping at Wegmans on 25th, Amazon return at Kohl's.<br>
 * 
 </TD>
 </HTML>                     
