--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6157,8 +6157,16 @@ PNH sightseeing on 5th-6th .<br>
 * HNH baseball on 24th at 10.00am (11th game, lost).<br> 
 * HNH swimming class on 25th at 3.00pm.<br>
 * Shopping at Wegmans on 25th, Amazon return at Kohl's.<br>
-* 
+* HNH baseball on 27th at 6.00pm (12th game, rained out).<br>
+* HNH baseball on 29th at 6.00pm (13th game, rained out).<br>
 </TD>
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>May 2025</TD>
+<TD>
+* 
 </HTML>                     
                        
                        
