--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6159,7 +6159,7 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 25th, Amazon return at Kohl's.<br>
 * HNH baseball on 27th at 6.00pm (12th game, rained out).<br>
 * HNH baseball on 29th at 6.00pm (13th game, rained out).<br>
-</TD>
+* Lunch at Sangam restaurant, old clothes/shoes donated at WTES on 31st.</TD>
 <TR>
 <TD><HR></TD>
 <TD><HR></TD>
