--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6159,14 +6159,16 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 25th, Amazon return at Kohl's.<br>
 * HNH baseball on 27th at 6.00pm (12th game, rained out).<br>
 * HNH baseball on 29th at 6.00pm (13th game, rained out).<br>
+* NPH received the voter registration card on 31st.<br>
 * Lunch at Sangam restaurant, old clothes/shoes donated at WTES on 31st.</TD>
 <TR>
 <TD><HR></TD>
 <TD><HR></TD>
 </TR>
-<TD>May 2025</TD>
+<TD>Jun 2025</TD>
 <TD>
-* 
+* NPH haircut at home by PNH on 1st.<br>
+* HNH swimming canceled, shopping at Wegmans on 1st.<br>
 </HTML>                     
                        
                        
