--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6169,6 +6169,14 @@ PNH sightseeing on 5th-6th .<br>
 <TD>
 * NPH haircut at home by PNH on 1st.<br>
 * HNH swimming canceled, shopping at Wegmans on 1st.<br>
+* PNH USCIS interview for citizenship on 2nd (Passed, Oath ceremony on 27th).<br>
+* HNH baseball on 2nd at 6.00pm (14th game, lost).<br>
+* HNH baseball on 6th at 6.30pm (playoff game, lost).<br>
+* Dinner pick-up from Domino's Pizza on 6th.<br>
+* Shopping at Sam's club and Target, dinner at Taco Bell on 7th.<br>
+* HNH swimming class on 8th at 3.00pm.<br>
+* Shopping at Wegmans on 8th.<br>
+* NPH received US passport book (valid 4-June-2035) on 9th.<br> 
 </HTML>                     
                        
                        
