--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6176,7 +6176,11 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Sam's club and Target, dinner at Taco Bell on 7th.<br>
 * HNH swimming class on 8th at 3.00pm.<br>
 * Shopping at Wegmans on 8th.<br>
-* NPH received US passport book (valid 4-June-2035) on 9th.<br> 
+* NPH received US passport book (valid until 4-June-2035) on 9th.<br> 
+* Air India plane crash in Ahmedabad on 12th, more than 250 people died.<br>
+* NPH posted the application for Surrending Indian passport on 13th.<br>
+* NPH received US passport card (valid until 4-June-2035) on 13th.<br> 
+* Dinner at Chipotle on 13th.<br>
 </HTML>                     
                        
                        
