--- a/home_index.html
+++ b/home_index.html
@@ -90,8 +90,7 @@ TR:nth-child(even) {
 <TR>
 <TH><h4>
 <a href="https://mymortgage.regionsmortgage.com/">Mortgage</a> -- <a href="https://www.mazdafinancialservices.com/us/en.html">Mazda</a><br>
-<a href="https://www.paypal.com/us/webapps/mpp/home">Paypal</a> -- <a href="https://account.venmo.com/">Venmo</a><br> 
-<a href="https://www.carecredit.com/login/">CareCredit</a>
+<a href="https://www.paypal.com/us/webapps/mpp/home">Paypal</a> -- <a href="https://account.venmo.com/">Venmo</a> 
 </h4></TH> 
 
 <TH></h4>
@@ -103,6 +102,7 @@ TR:nth-child(even) {
 <TH><h4>
 <a href="https://www.capitalone.com">CapitalOne</a> (Bank & CC)<br>
 <a href="https://www.chase.com/personal/credit-cards/login-account-access">Amazon--Chase</a>
+<a href="https://www.carecredit.com/login/">CareCredit</a>
 </h4></TH>
 
 <TH></h4>
