--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6181,6 +6181,8 @@ PNH sightseeing on 5th-6th .<br>
 * NPH posted the application for Surrending Indian passport on 13th.<br>
 * NPH received US passport card (valid until 4-June-2035) on 13th.<br> 
 * Dinner at Chipotle on 13th.<br>
+* HNH swimming class on 15th at 3.00pm.<br>
+* Shopping at Wegmans on 15th.<br>
 </HTML>                     
                        
                        
