--- a/home_index.html
+++ b/home_index.html
@@ -101,7 +101,7 @@ TR:nth-child(even) {
 
 <TH><h4>
 <a href="https://www.capitalone.com">CapitalOne</a> (Bank & CC)<br>
-<a href="https://www.chase.com/personal/credit-cards/login-account-access">Amazon--Chase</a>
+<a href="https://www.chase.com/personal/credit-cards/login-account-access">Amazon--Chase</a><br>
 <a href="https://www.carecredit.com/login/">CareCredit</a>
 </h4></TH>
 
