--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6183,6 +6183,7 @@ PNH sightseeing on 5th-6th .<br>
 * Dinner at Chipotle on 13th.<br>
 * HNH swimming class on 15th at 3.00pm.<br>
 * Shopping at Wegmans on 15th.<br>
+* HNH orthodontist appointment on 19th.<br>
 </HTML>                     
                        
                        
