--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6178,12 +6178,16 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 8th.<br>
 * NPH received US passport book (valid until 4-June-2035) on 9th.<br> 
 * Air India plane crash in Ahmedabad on 12th, more than 250 people died.<br>
-* NPH posted the application for Surrending Indian passport on 13th.<br>
+* NPH posted the application for Surrendering Indian passport on 13th.<br>
 * NPH received US passport card (valid until 4-June-2035) on 13th.<br> 
 * Dinner at Chipotle on 13th.<br>
 * HNH swimming class on 15th at 3.00pm.<br>
 * Shopping at Wegmans on 15th.<br>
 * HNH orthodontist appointment on 19th.<br>
+* Shopping at Sam's club on 20th, broken stuff at dumpster.<br>
+* Checked UMBC, lunch at Honest Restaurant on 21st, shopping at Patel Borthers.<br>
+* HNH swimming class on 22nd at 3.00pm.<br>
+* Shopping at Wegmans on 22nd.<br>
 </HTML>                     
                        
                        
