--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6188,6 +6188,8 @@ PNH sightseeing on 5th-6th .<br>
 * Checked UMBC, lunch at Honest Restaurant on 21st, shopping at Patel Borthers.<br>
 * HNH swimming class on 22nd at 3.00pm.<br>
 * Shopping at Wegmans on 22nd.<br>
+* HNH UMBC Summer Enrichment Academy 1-week course (Life Skills for Success) -- 9am to 12pm, 23rd to 27th.<br>
+* NPH dental appointment (cleaning) on the 23rd.<br> 
 </HTML>                     
                        
                        
