--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6150,7 +6150,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH baseball on 19th at 6.00pm (9th game, lost).<br>
 * HNH school Spring concert on 21st (6.15pm to 8.00pm) - Band/Trumpet.<br>
 * Honda completed 60,000 miles on 22nd.<br>
-* NPH at USCIS oath ceremony on 22nd -- Officially US citizen, got Certificate of Naturalization.<br>
+* NPH USCIS oath ceremony on 22nd -- Officially US citizen, got Certificate of Naturalization.<br>
 * HNH baseball on 22nd at 6.00pm (10th game, rained out).<br> 
 * NPH applied for a US passport on 23rd.<br>
 * Dinner at Baja Fresh, Cheesecakes from Cheesecake Factory on 23rd.<br>
@@ -6190,6 +6190,13 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 22nd.<br>
 * HNH UMBC Summer Enrichment Academy 1-week course (Life Skills for Success) -- 9am to 12pm, 23rd to 27th.<br>
 * NPH dental appointment (cleaning) on the 23rd.<br> 
+* PNH got her follow-up ear checked-up (all good) on 25th.<br>
+* PNH regular Dr appointment (June blood reports are normal) on 26th.<br>
+* PNH USCIS oath ceremony on 27th -- Officially US citizen, got Certificate of Naturalization.<br>
+* KPH-JPH booked a new apartment/flat (3BHK, Kameshwar) near NPV-PHV place in Abad on 27th.<br>
+* NPH-HNH and PNH friends (Lisa, Marie) attended the oath ceremony.<br>
+* HNH UMBC course closing ceremony at 11.30am on 27th.<br>
+* Shopping at Walmart on 27th.<br>
 </HTML>                     
                        
                        
