--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6197,6 +6197,8 @@ PNH sightseeing on 5th-6th .<br>
 * NPH-HNH and PNH friends (Lisa, Marie) attended the oath ceremony.<br>
 * HNH UMBC course closing ceremony at 11.30am on 27th.<br>
 * Shopping at Walmart on 27th.<br>
+* PNH applied for a US passport on 28th.<br>
+* Lunch at MOD Pizza on 28th.<br>
 </HTML>                     
                        
                        
