--- a/personal/memories.html
+++ b/personal/memories.html
@@ -5350,7 +5350,7 @@ PNH sightseeing on 5th-6th .<br>
 * N-P-H to IAD airport to drop-off JPH/KPH (KLM, Economy Class) on 25th -- total ~156 miles (1pm to 7.30pm), dinner at Taco Bell.<br>
 * JPH/KPH trip total 'mileage' around 3000 miles (47550 miles).<br>
 * JPH/KPH reached Abad on 26th night (27th early morning India).<br>
-* PNH got her follow-up ear checked-up (all good) on 27th.<br>
+* PNH follow-up ear check-up (all good) on 27th.<br>
 * Shopping at Target and Walmart on 29th.</TD>
 <TR>
 <TD><HR></TD>
@@ -5768,7 +5768,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 23rd at 1.30pm.<br>
 * Shopping at Walmart on 23rd.<br>
 * PNH regular Dr appointment (December blood reports are normal) on 24th.<br>
-* PNH got her follow-up ear checked-up (all good) on 25th, antibiotics for sinus infection.<br>
+* PNH follow-up ear check-up (all good) on 25th, antibiotics for sinus infection.<br>
 * HNH swimming class on 26th at 6.30pm (makeup).<br>
 * Basement drywall fixed by Joe Pilkerton (handyman) on 27th and 1st July.<br>
 * HNH to friend's pool party for ~1 hour on 28th.<br>
@@ -6190,7 +6190,7 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 22nd.<br>
 * HNH UMBC Summer Enrichment Academy 1-week course (Life Skills for Success) -- 9am to 12pm, 23rd to 27th.<br>
 * NPH dental appointment (cleaning) on the 23rd.<br> 
-* PNH got her follow-up ear checked-up (all good) on 25th.<br>
+* PNH follow-up ear check-up (all good) on 25th.<br>
 * PNH regular Dr appointment (June blood reports are normal) on 26th.<br>
 * PNH USCIS oath ceremony on 27th -- Officially US citizen, got Certificate of Naturalization.<br>
 * KPH-JPH booked a new apartment/flat (3BHK, Kameshwar) near NPV-PHV place in Abad on 27th.<br>
@@ -6199,6 +6199,15 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Walmart on 27th.<br>
 * PNH applied for a US passport on 28th.<br>
 * Lunch at MOD Pizza on 28th.<br>
+* HNH swimming class on 29th at 3.00pm.<br>
+* Shopping at Wegmans on 29th.</TD>
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Jul 2025</TD>
+<TD>
+* 
 </HTML>                     
                        
                        
