--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6207,6 +6207,7 @@ PNH sightseeing on 5th-6th .<br>
 </TR>
 <TD>Jul 2025</TD>
 <TD>
+* NPH to Social Security office (status update, no new card) on 3rd.<br>
 * 
 </HTML>                     
                        
